python/theory L/fichiers cours 2122/TP1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    IF
    THEN

Grammar

Rule 0     S' -> start
Rule 1     start -> linst
Rule 2     linst -> linst inst
Rule 3     linst -> inst
Rule 4     inst -> NAME EQUAL expression COLON
Rule 5     inst -> PRINT LPAREN expression RPAREN COLON
Rule 6     expression -> expression PLUS expression
Rule 7     expression -> expression MINUS expression
Rule 8     expression -> expression TIMES expression
Rule 9     expression -> expression OR expression
Rule 10    expression -> expression AND expression
Rule 11    expression -> expression EQUALS expression
Rule 12    expression -> expression LOWER expression
Rule 13    expression -> expression HIGHER expression
Rule 14    expression -> expression DIVIDE expression
Rule 15    expression -> MINUS expression
Rule 16    expression -> LPAREN expression RPAREN
Rule 17    expression -> NUMBER
Rule 18    expression -> NAME

Terminals, with rules where they appear

AND                  : 10
COLON                : 4 5
DIVIDE               : 14
EQUAL                : 4
EQUALS               : 11
HIGHER               : 13
IF                   : 
LOWER                : 12
LPAREN               : 5 16
MINUS                : 7 15
NAME                 : 4 18
NUMBER               : 17
OR                   : 9
PLUS                 : 6
PRINT                : 5
RPAREN               : 5 16
THEN                 : 
TIMES                : 8
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 16
inst                 : 2 3
linst                : 1 2
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . linst
    (2) linst -> . linst inst
    (3) linst -> . inst
    (4) inst -> . NAME EQUAL expression COLON
    (5) inst -> . PRINT LPAREN expression RPAREN COLON

    NAME            shift and go to state 4
    PRINT           shift and go to state 5

    start                          shift and go to state 1
    linst                          shift and go to state 2
    inst                           shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> linst .
    (2) linst -> linst . inst
    (4) inst -> . NAME EQUAL expression COLON
    (5) inst -> . PRINT LPAREN expression RPAREN COLON

    $end            reduce using rule 1 (start -> linst .)
    NAME            shift and go to state 4
    PRINT           shift and go to state 5

    inst                           shift and go to state 6

state 3

    (3) linst -> inst .

    NAME            reduce using rule 3 (linst -> inst .)
    PRINT           reduce using rule 3 (linst -> inst .)
    $end            reduce using rule 3 (linst -> inst .)


state 4

    (4) inst -> NAME . EQUAL expression COLON

    EQUAL           shift and go to state 7


state 5

    (5) inst -> PRINT . LPAREN expression RPAREN COLON

    LPAREN          shift and go to state 8


state 6

    (2) linst -> linst inst .

    NAME            reduce using rule 2 (linst -> linst inst .)
    PRINT           reduce using rule 2 (linst -> linst inst .)
    $end            reduce using rule 2 (linst -> linst inst .)


state 7

    (4) inst -> NAME EQUAL . expression COLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 10

state 8

    (5) inst -> PRINT LPAREN . expression RPAREN COLON
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 14

state 9

    (18) expression -> NAME .

    COLON           reduce using rule 18 (expression -> NAME .)
    PLUS            reduce using rule 18 (expression -> NAME .)
    MINUS           reduce using rule 18 (expression -> NAME .)
    TIMES           reduce using rule 18 (expression -> NAME .)
    OR              reduce using rule 18 (expression -> NAME .)
    AND             reduce using rule 18 (expression -> NAME .)
    EQUALS          reduce using rule 18 (expression -> NAME .)
    LOWER           reduce using rule 18 (expression -> NAME .)
    HIGHER          reduce using rule 18 (expression -> NAME .)
    DIVIDE          reduce using rule 18 (expression -> NAME .)
    RPAREN          reduce using rule 18 (expression -> NAME .)


state 10

    (4) inst -> NAME EQUAL expression . COLON
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . OR expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . EQUALS expression
    (12) expression -> expression . LOWER expression
    (13) expression -> expression . HIGHER expression
    (14) expression -> expression . DIVIDE expression

    COLON           shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    OR              shift and go to state 19
    AND             shift and go to state 20
    EQUALS          shift and go to state 21
    LOWER           shift and go to state 22
    HIGHER          shift and go to state 23
    DIVIDE          shift and go to state 24


state 11

    (15) expression -> MINUS . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 25

state 12

    (16) expression -> LPAREN . expression RPAREN
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 26

state 13

    (17) expression -> NUMBER .

    COLON           reduce using rule 17 (expression -> NUMBER .)
    PLUS            reduce using rule 17 (expression -> NUMBER .)
    MINUS           reduce using rule 17 (expression -> NUMBER .)
    TIMES           reduce using rule 17 (expression -> NUMBER .)
    OR              reduce using rule 17 (expression -> NUMBER .)
    AND             reduce using rule 17 (expression -> NUMBER .)
    EQUALS          reduce using rule 17 (expression -> NUMBER .)
    LOWER           reduce using rule 17 (expression -> NUMBER .)
    HIGHER          reduce using rule 17 (expression -> NUMBER .)
    DIVIDE          reduce using rule 17 (expression -> NUMBER .)
    RPAREN          reduce using rule 17 (expression -> NUMBER .)


state 14

    (5) inst -> PRINT LPAREN expression . RPAREN COLON
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . OR expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . EQUALS expression
    (12) expression -> expression . LOWER expression
    (13) expression -> expression . HIGHER expression
    (14) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 27
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    OR              shift and go to state 19
    AND             shift and go to state 20
    EQUALS          shift and go to state 21
    LOWER           shift and go to state 22
    HIGHER          shift and go to state 23
    DIVIDE          shift and go to state 24


state 15

    (4) inst -> NAME EQUAL expression COLON .

    NAME            reduce using rule 4 (inst -> NAME EQUAL expression COLON .)
    PRINT           reduce using rule 4 (inst -> NAME EQUAL expression COLON .)
    $end            reduce using rule 4 (inst -> NAME EQUAL expression COLON .)


state 16

    (6) expression -> expression PLUS . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 28

state 17

    (7) expression -> expression MINUS . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 29

state 18

    (8) expression -> expression TIMES . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 30

state 19

    (9) expression -> expression OR . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 31

state 20

    (10) expression -> expression AND . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 32

state 21

    (11) expression -> expression EQUALS . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 33

state 22

    (12) expression -> expression LOWER . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 34

state 23

    (13) expression -> expression HIGHER . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 35

state 24

    (14) expression -> expression DIVIDE . expression
    (6) expression -> . expression PLUS expression
    (7) expression -> . expression MINUS expression
    (8) expression -> . expression TIMES expression
    (9) expression -> . expression OR expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression EQUALS expression
    (12) expression -> . expression LOWER expression
    (13) expression -> . expression HIGHER expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . MINUS expression
    (16) expression -> . LPAREN expression RPAREN
    (17) expression -> . NUMBER
    (18) expression -> . NAME

    MINUS           shift and go to state 11
    LPAREN          shift and go to state 12
    NUMBER          shift and go to state 13
    NAME            shift and go to state 9

    expression                     shift and go to state 36

state 25

    (15) expression -> MINUS expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . OR expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . EQUALS expression
    (12) expression -> expression . LOWER expression
    (13) expression -> expression . HIGHER expression
    (14) expression -> expression . DIVIDE expression

    COLON           reduce using rule 15 (expression -> MINUS expression .)
    PLUS            reduce using rule 15 (expression -> MINUS expression .)
    MINUS           reduce using rule 15 (expression -> MINUS expression .)
    TIMES           reduce using rule 15 (expression -> MINUS expression .)
    OR              reduce using rule 15 (expression -> MINUS expression .)
    AND             reduce using rule 15 (expression -> MINUS expression .)
    EQUALS          reduce using rule 15 (expression -> MINUS expression .)
    LOWER           reduce using rule 15 (expression -> MINUS expression .)
    HIGHER          reduce using rule 15 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 15 (expression -> MINUS expression .)
    RPAREN          reduce using rule 15 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 16 ]
  ! MINUS           [ shift and go to state 17 ]
  ! TIMES           [ shift and go to state 18 ]
  ! OR              [ shift and go to state 19 ]
  ! AND             [ shift and go to state 20 ]
  ! EQUALS          [ shift and go to state 21 ]
  ! LOWER           [ shift and go to state 22 ]
  ! HIGHER          [ shift and go to state 23 ]
  ! DIVIDE          [ shift and go to state 24 ]


state 26

    (16) expression -> LPAREN expression . RPAREN
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . OR expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . EQUALS expression
    (12) expression -> expression . LOWER expression
    (13) expression -> expression . HIGHER expression
    (14) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 37
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    OR              shift and go to state 19
    AND             shift and go to state 20
    EQUALS          shift and go to state 21
    LOWER           shift and go to state 22
    HIGHER          shift and go to state 23
    DIVIDE          shift and go to state 24


state 27

    (5) inst -> PRINT LPAREN expression RPAREN . COLON

    COLON           shift and go to state 38


state 28

    (6) expression -> expression PLUS expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . OR expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . EQUALS expression
    (12) expression -> expression . LOWER expression
    (13) expression -> expression . HIGHER expression
    (14) expression -> expression . DIVIDE expression

    COLON           reduce using rule 6 (expression -> expression PLUS expression .)
    PLUS            reduce using rule 6 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 6 (expression -> expression PLUS expression .)
    OR              reduce using rule 6 (expression -> expression PLUS expression .)
    AND             reduce using rule 6 (expression -> expression PLUS expression .)
    EQUALS          reduce using rule 6 (expression -> expression PLUS expression .)
    LOWER           reduce using rule 6 (expression -> expression PLUS expression .)
    HIGHER          reduce using rule 6 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 6 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 24

  ! TIMES           [ reduce using rule 6 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 6 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 16 ]
  ! MINUS           [ shift and go to state 17 ]
  ! OR              [ shift and go to state 19 ]
  ! AND             [ shift and go to state 20 ]
  ! EQUALS          [ shift and go to state 21 ]
  ! LOWER           [ shift and go to state 22 ]
  ! HIGHER          [ shift and go to state 23 ]


state 29

    (7) expression -> expression MINUS expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . OR expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . EQUALS expression
    (12) expression -> expression . LOWER expression
    (13) expression -> expression . HIGHER expression
    (14) expression -> expression . DIVIDE expression

    COLON           reduce using rule 7 (expression -> expression MINUS expression .)
    PLUS            reduce using rule 7 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 7 (expression -> expression MINUS expression .)
    OR              reduce using rule 7 (expression -> expression MINUS expression .)
    AND             reduce using rule 7 (expression -> expression MINUS expression .)
    EQUALS          reduce using rule 7 (expression -> expression MINUS expression .)
    LOWER           reduce using rule 7 (expression -> expression MINUS expression .)
    HIGHER          reduce using rule 7 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 7 (expression -> expression MINUS expression .)
    TIMES           shift and go to state 18
    DIVIDE          shift and go to state 24

  ! TIMES           [ reduce using rule 7 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 7 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 16 ]
  ! MINUS           [ shift and go to state 17 ]
  ! OR              [ shift and go to state 19 ]
  ! AND             [ shift and go to state 20 ]
  ! EQUALS          [ shift and go to state 21 ]
  ! LOWER           [ shift and go to state 22 ]
  ! HIGHER          [ shift and go to state 23 ]


state 30

    (8) expression -> expression TIMES expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . OR expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . EQUALS expression
    (12) expression -> expression . LOWER expression
    (13) expression -> expression . HIGHER expression
    (14) expression -> expression . DIVIDE expression

    COLON           reduce using rule 8 (expression -> expression TIMES expression .)
    PLUS            reduce using rule 8 (expression -> expression TIMES expression .)
    MINUS           reduce using rule 8 (expression -> expression TIMES expression .)
    TIMES           reduce using rule 8 (expression -> expression TIMES expression .)
    OR              reduce using rule 8 (expression -> expression TIMES expression .)
    AND             reduce using rule 8 (expression -> expression TIMES expression .)
    EQUALS          reduce using rule 8 (expression -> expression TIMES expression .)
    LOWER           reduce using rule 8 (expression -> expression TIMES expression .)
    HIGHER          reduce using rule 8 (expression -> expression TIMES expression .)
    DIVIDE          reduce using rule 8 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 8 (expression -> expression TIMES expression .)

  ! PLUS            [ shift and go to state 16 ]
  ! MINUS           [ shift and go to state 17 ]
  ! TIMES           [ shift and go to state 18 ]
  ! OR              [ shift and go to state 19 ]
  ! AND             [ shift and go to state 20 ]
  ! EQUALS          [ shift and go to state 21 ]
  ! LOWER           [ shift and go to state 22 ]
  ! HIGHER          [ shift and go to state 23 ]
  ! DIVIDE          [ shift and go to state 24 ]


state 31

    (9) expression -> expression OR expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . OR expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . EQUALS expression
    (12) expression -> expression . LOWER expression
    (13) expression -> expression . HIGHER expression
    (14) expression -> expression . DIVIDE expression

    COLON           reduce using rule 9 (expression -> expression OR expression .)
    OR              reduce using rule 9 (expression -> expression OR expression .)
    EQUALS          reduce using rule 9 (expression -> expression OR expression .)
    RPAREN          reduce using rule 9 (expression -> expression OR expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    AND             shift and go to state 20
    LOWER           shift and go to state 22
    HIGHER          shift and go to state 23
    DIVIDE          shift and go to state 24

  ! PLUS            [ reduce using rule 9 (expression -> expression OR expression .) ]
  ! MINUS           [ reduce using rule 9 (expression -> expression OR expression .) ]
  ! TIMES           [ reduce using rule 9 (expression -> expression OR expression .) ]
  ! AND             [ reduce using rule 9 (expression -> expression OR expression .) ]
  ! LOWER           [ reduce using rule 9 (expression -> expression OR expression .) ]
  ! HIGHER          [ reduce using rule 9 (expression -> expression OR expression .) ]
  ! DIVIDE          [ reduce using rule 9 (expression -> expression OR expression .) ]
  ! OR              [ shift and go to state 19 ]
  ! EQUALS          [ shift and go to state 21 ]


state 32

    (10) expression -> expression AND expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . OR expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . EQUALS expression
    (12) expression -> expression . LOWER expression
    (13) expression -> expression . HIGHER expression
    (14) expression -> expression . DIVIDE expression

    COLON           reduce using rule 10 (expression -> expression AND expression .)
    OR              reduce using rule 10 (expression -> expression AND expression .)
    AND             reduce using rule 10 (expression -> expression AND expression .)
    EQUALS          reduce using rule 10 (expression -> expression AND expression .)
    RPAREN          reduce using rule 10 (expression -> expression AND expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    LOWER           shift and go to state 22
    HIGHER          shift and go to state 23
    DIVIDE          shift and go to state 24

  ! PLUS            [ reduce using rule 10 (expression -> expression AND expression .) ]
  ! MINUS           [ reduce using rule 10 (expression -> expression AND expression .) ]
  ! TIMES           [ reduce using rule 10 (expression -> expression AND expression .) ]
  ! LOWER           [ reduce using rule 10 (expression -> expression AND expression .) ]
  ! HIGHER          [ reduce using rule 10 (expression -> expression AND expression .) ]
  ! DIVIDE          [ reduce using rule 10 (expression -> expression AND expression .) ]
  ! OR              [ shift and go to state 19 ]
  ! AND             [ shift and go to state 20 ]
  ! EQUALS          [ shift and go to state 21 ]


state 33

    (11) expression -> expression EQUALS expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . OR expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . EQUALS expression
    (12) expression -> expression . LOWER expression
    (13) expression -> expression . HIGHER expression
    (14) expression -> expression . DIVIDE expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
  ! shift/reduce conflict for LOWER resolved as shift
  ! shift/reduce conflict for HIGHER resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
    COLON           reduce using rule 11 (expression -> expression EQUALS expression .)
    RPAREN          reduce using rule 11 (expression -> expression EQUALS expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    OR              shift and go to state 19
    AND             shift and go to state 20
    EQUALS          shift and go to state 21
    LOWER           shift and go to state 22
    HIGHER          shift and go to state 23
    DIVIDE          shift and go to state 24

  ! PLUS            [ reduce using rule 11 (expression -> expression EQUALS expression .) ]
  ! MINUS           [ reduce using rule 11 (expression -> expression EQUALS expression .) ]
  ! TIMES           [ reduce using rule 11 (expression -> expression EQUALS expression .) ]
  ! OR              [ reduce using rule 11 (expression -> expression EQUALS expression .) ]
  ! AND             [ reduce using rule 11 (expression -> expression EQUALS expression .) ]
  ! EQUALS          [ reduce using rule 11 (expression -> expression EQUALS expression .) ]
  ! LOWER           [ reduce using rule 11 (expression -> expression EQUALS expression .) ]
  ! HIGHER          [ reduce using rule 11 (expression -> expression EQUALS expression .) ]
  ! DIVIDE          [ reduce using rule 11 (expression -> expression EQUALS expression .) ]


state 34

    (12) expression -> expression LOWER expression .
    (6) expression -> expression . PLUS expression
    (7) expression -> expression . MINUS expression
    (8) expression -> expression . TIMES expression
    (9) expression -> expression . OR expression
    (10) expression -> expression . AND expression
    (11) expression -> expression . EQUALS expression
    (12) expression -> expression . LOWER expression
    (13) expression -> expression . HIGHER expression
    (14) expression -> expression . DIVIDE expression
